[package]
name = "walkdir"
version = "2.2.2"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Recursively walk a directory."
documentation = "https://docs.rs/walkdir/"
homepage = "https://github.com/BurntSushi/walkdir"
repository = "https://github.com/BurntSushi/walkdir"
readme = "README.md"
keywords = ["directory", "recursive", "walk", "iterator"]
categories = ["filesystem"]
license = "Unlicense/MIT"

[badges]
travis-ci = { repository = "BurntSushi/walkdir" }
appveyor = { repository = "BurntSushi/walkdir" }

[dependencies]
same-file = "1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["std", "fileapi", "winbase", "winnt"]

[dev-dependencies]
docopt = "1"
quickcheck = { version = "0.6", default-features = false }
rand = "0.4"
serde = "1"
serde_derive = "1"
